--- a/GCDependencyInjectionTests/GCDIYamlExampleContainer.yml
+++ b/GCDependencyInjectionTests/GCDIYamlExampleContainer.yml
@@ -21,4 +21,4 @@ Services:
   example.injected_service:
     Class: GCDIInjectedExampleService
     MethodCalls:
-      - { Selector: 'setInjectedService:', Arguments: ['%example.parameter%'] }
+      - ['setInjectedService:', ['%example.parameter%']]
